<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/btn_collection_listening"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_margin="10dp"
        android:textSize="30dp"
        android:text="@string/title_listening"
        />

    <Button
        android:id="@+id/btn_collection_reading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:textSize="30dp"
        android:layout_margin="10dp"
        android:text="@string/title_reading"
        />

    <Button
        android:id="@+id/btn_collection_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_margin="10dp"
        android:textSize="30dp"
        android:text="@string/title_translation"
        />

    <Button
        android:id="@+id/btn_collection_writing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_margin="10dp"
        android:textSize="30dp"
        android:text="@string/title_writing"
        />

</LinearLayout>