<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 标题栏-->
    <include layout="@layout/titlebar"/>

    <!-- FrameLayout-->
    <FrameLayout
        android:id="@+id/fl_video_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />

    <!-- RadioGroup-->
    <RadioGroup
        android:id="@+id/rg_bottom_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="3dp"
        android:background="#11000000"
        >

        <RadioButton
            android:id="@+id/rb_video"
            android:text="@string/local_video"
            android:drawableTop="@drawable/rb_video_drawable_selector"
            style="@style/bottom_tag_style"
            />

        <RadioButton
            android:id="@+id/rb_audio"
            android:text="@string/local_audio"
            android:drawableTop="@drawable/rb_audio_drawable_selector"
            style="@style/bottom_tag_style"
            />

        <RadioButton
            android:id="@+id/rb_net_video"
            android:text="@string/network_video"
            android:drawableTop="@drawable/rb_net_video_drawable_selector"
            style="@style/bottom_tag_style"
            />

        <RadioButton
            android:id="@+id/rb_net_audio"
            android:text="@string/network_audio"
            android:drawableTop="@drawable/rb_net_audio_drawable_selector"
            style="@style/bottom_tag_style"
            />

    </RadioGroup>

</LinearLayout>