<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_003"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/widget_top_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:layout_margin="10dp"
        >

       <!-- <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/progress"
            android:layout_gravity="center"
            android:textSize="25dp"
            />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />-->

        <TextView
            android:id="@+id/tv_word_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_progress"
            android:layout_gravity="center"
            android:textSize="25dp"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="#ffffff"
        android:layout_margin="20dp"
        >

        <TextView
            android:id="@+id/tv_study_word_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:text="@string/words"
            android:textSize="30dp"
            />

        <TextView
            android:id="@+id/tv_study_phonetic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_study_word_display"
            android:text="@string/phonetic"
            android:textSize="25dp"
            />

        <TextView
            android:id="@+id/tv_chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/study_word_tips"
            android:textSize="20dp"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_option"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        >

        <Button
            android:id="@+id/btn_understand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/know"
            android:background="#00B0FF"
            />

        <Button
            android:id="@+id/btn_dont_understand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/do_not_know"
            android:background="#ffffff"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_next_word"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:visibility="gone"
        >

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/next"
            android:background="#ffffff"
            />

    </LinearLayout>


</LinearLayout>