<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        />

    <!-- 显示 距离考试时间 的控件-->
    <LinearLayout
        android:id="@+id/ll_display_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/banner"
        >

        <LinearLayout
            android:id="@+id/ll_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="left"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/time_from_cet4"
                android:textColor="#302A2A"
                />

            <TextView
                android:id="@+id/tv_dayDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_much_days"
                android:textColor="#FF9800"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_text"
                android:textColor="#302A2A"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_date"
            />

    </LinearLayout>

</LinearLayout>