<?xml version="1.0" encoding="utf-8"?>
<com.example.view.SimpleAudioPlayer xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:uriString="@string/uriString"
    android:background="#ffffff">

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/tv_current_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/current_time"
            android:textSize="18sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_pause_simple_audio_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_pause" />

        <TextView
            android:id="@+id/tv_duration_simple_audio_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="@string/audio_duration"
            android:textSize="18sp"
            android:visibility="gone" />

    </RelativeLayout>


</com.example.view.SimpleAudioPlayer>